# castelo-de-viana

./: .gitignore  0.bg  0.fg  0.lst  1.bg  1.fg  1.lst  10.fg  10.lst  11.fg  11.lst  12.fg  13.fg  14.fg  15.lst  16.bg  16.fg  2.bg  2.fg  2.lst  21.fg  22.fg  23.fg  23.lst  3.bg  4.bg  4.fg  4.lst  5.fg  6.lst  CGARenderer.cpp  CMakeLists.txt  Game.cpp  Game.h  LICENSE  LoadImage.cpp  LoadImage.h  LoadImageCGA.cpp  LoadImageDOS.cpp  LoadImageSDL.cpp  (+29 more)
NDK-version/: build.gradle  settings.gradle
NDK-version/app/: build.gradle
NDK-version/app/src/main/: AndroidManifest.xml
NDK-version/app/src/main/assets/: gamedata.pfs
NDK-version/gradle/wrapper/: gradle-wrapper.properties
OPL2LPT/: OPL2.cpp  OPL2.h  controller.cpp  controller.h  timer.cpp  timer.h
assets/: Makefile  make_package.py  make_package.py~
assets/img/: capi1.img  capi1_1.img  capi2_1.img  door1.img  down0.img  foe1.img  hand1.img  intro.img  paused.img  tile1.img  window1.img
cpc_cfg/: build_config.mk
data/: 11.bg  13.fg  14.lst  15.fg  16.fg  3.fg  4.fg  5.lst
include/: AmigaInt.h  CPCInt.h  CPackedFileReader.h  CRenderer.h  Common.h  Game.h  IFileLoaderDelegate.h  LoadImage.h  NativeBitmap.h  Renderer.h
res/: arrow.img  arrow0.img  attack0.img  bricks0.img  capi0.lst  capi0_0.img  capi0_2.img  capi0_3.img  capi1_2.img  capi1_3.img  capi2_0.img  capi2_2.img  capi3.lst  door0.img  down1.img  empty.img  foe0.img  gameover.img  garg0.img  garg1.img  hero0.img  hero1.img  key.img  lava.lst  meat.img  secret.img  tile4.img  tinhoso1.img  torch.lst  torch0.img  torch1.img  up1.img  victory.img  window.lst  window0.img
resCGA/: 0.bg  16.lst  21.lst  22.lst  23.bg  capi0_1.img  capi1.lst  hand0.img  tile0.img
resSDL/: 10.fg  12.fg  13.fg  14.fg  23.fg  6.fg  capi2.lst  lava1.img
resVGA/: 1.fg  12.bg  14.bg  2.lst  21.fg  22.bg  arrow1.img  arrowup.img  capi0.lst  jump0.img  lava0.img  tile2.img  tinhoso0.img  window.lst
rescga/: 1.bg  13.bg  15.fg  2.bg  22.fg  3.fg  4.fg  capi1.lst  capi2.lst  capi3.lst
src/: AmigaRenderer.c  CGARenderer.cpp  CPCRenderer.c  CPackedFileReader.c  CPackedFileReader.cpp  Common.c  Common.cpp  DOSRenderer.c  DOSRenderer.cpp  Game.c  Game.cpp  IFileLoaderDelegate.cpp  LoadBitmap.c  LoadBitmap.cpp  LoadImageCGA.c  LoadImageCGA.cpp  LoadImageSDL.cpp  LoadImageVGA.cpp  Main.c  Main.cpp  MusicDOS.cpp  MusicSDL.cpp  NativeBitmap.cpp  NullMusic.c  NullMusic.cpp  SDL2Renderer.c  SDL2Renderer.cpp  SDLRenderer.c  SDLRenderer.cpp  VGARenderer.cpp  packer.cpp
(+9 files in other folders)
